Corrected some flex gaph at 360px

--- a/css/styles.css
+++ b/css/styles.css
@@ -563,10 +563,11 @@ SPACING-SYSTEM (px)
 
   .btn-hero {
     width: 170px;
+    margin-bottom: 24px;
   }
 
   .hero a {
-    margin-top: 24px;
+    margin-top: 48px;
     text-align: center;
   }
 
@@ -591,6 +592,10 @@ SPACING-SYSTEM (px)
     justify-content: center;
   }
 
+  .card-details {
+    gap: 24px;
+  }
+
   /* Mission */
   .mission {
     flex-wrap: wrap;
@@ -602,7 +607,7 @@ SPACING-SYSTEM (px)
 
   .mission-text {
     width: 100%;
-    gap: 20px;
+    gap: 24px;
   }
 
   .mission-text h1 {
@@ -665,6 +670,7 @@ SPACING-SYSTEM (px)
     margin-top: 24px;
     font-size: 0.75rem;
     font-weight: 700;
+    margin-bottom: 32px;
   }
 
   .banner-image {
@@ -704,6 +710,7 @@ SPACING-SYSTEM (px)
 
   .projects {
     margin-top: 32px;
+    gap: 24px;
   }
 
   .btn-project {
@@ -764,7 +771,7 @@ SPACING-SYSTEM (px)
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 32px;
+    gap: 48px;
     text-align: center;
     padding: 20px;
   }
